# ColdSpace

./: Anim_Base.cpp  Anim_Base.h  Anim_Directional.cpp  Anim_Directional.h  AudioManager.h  BaseState.h  Behaviour.cpp  Behaviour.h  Bitmask.h  CMakeLists.txt  C_Attacker.h  C_Base.h  C_Collidable.h  C_Controller.h  C_Drawable.h  C_Health.h  C_Movable.h  C_Position.h  C_SoundEmitter.h  C_SoundListener.h  C_SpriteSheet.h  C_State.h  C_TimedComponentBase.h  C_UI_Element.h  C_Vision.h  Character.cpp  Character.h  Communicator.h  DebugOverlay.h  Direction.h  Directions.h  ECS_Types.h  Enemy.cpp  Enemy.h  EntityBase.cpp  EntityBase.h  EntityEvents.h  EntityManager.cpp  EntityManager.h  EntityMessages.h  (+94 more)
media/Entities/: Ally.entity  Enemy.entity  Player.entity  Skeleton.entity
media/GUI_Interfaces/: MainMenu.interface  Test.interface
media/GUI_Styles/: MainMenuTitle.style
media/Maps/: map1.map
media/Sounds/: enemyFootsteps.sound
media/Spritesheets/: Ally.sheet  Enemy.sheet
